--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- cdn deez nuts for htmx -->
     <script
       src="https://unpkg.com/htmx.org@1.9.8"
       integrity="sha384-rgjA7mptc2ETQqXoYC3/zJvkU7K/aP44Y+z7xQuJiVnB/422P/Ak+F/AqFR7E4Wr"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/styles.css" />
-    <title>{% block title %}Kraken - {{ title }}{% endblock %}</title>
+    <!-- tailwind deez css -->
+    <link rel="stylesheet" href="/styles/tailwind.css" />
+    <title>{% block title %}{% endblock %}</title>
     {% block head %}{% endblock %}
   </head>
   <body>
-    <div id="content">
-      {% block content %}
-      <p>Placeholder content</p>
-      {% endblock %}
-    </div>
+    {% block content %}{% endblock %}
   </body>
 </html>
