--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,8 @@
 <!-- prettier-ignore -->
 {% extends "base.html" %}
-{% block title %}Index{% endblock %}
+{% block title %}{{title}}{% endblock %}
 {% block content %}
 
-<h1>Shuttle Todos</h1>
-<form id="add-form">
-  <input
-    placeholder="Your todo description..."
-    required
-    type="text"
-    name="description"
-  />
-  <button
-    hx-post="/todos"
-    hx-trigger="click"
-    hx-target="#todos-content"
-    hx-swap="beforeend"
-  >
-    Add
-  </button>
-</form>
-<div
-  id="list"
-  hx-get="/todos"
-  hx-target="this"
-  hx-trigger="load"
-  hx-swap="outerHTML"
->
-  Loading...
-</div>
+<section class="bg-indigo-400 text-white font-black text-6xl">Hello</section>
+
 {% endblock %}
