--- a/templates/test.html
+++ b/templates/test.html
@@ -1,12 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="/styles.css" />
-  </head>
-  <body>
-    Hello HTML
-  </body>
-</html>
+<!-- prettier-ignore -->
+{% extends "base.html" %}
+{% block title %}Index{% endblock %}
+{% block content %}
+
+<h1>Shuttle Todos</h1>
+<form id="add-form">
+  <input
+    placeholder="Your todo description..."
+    required
+    type="text"
+    name="description"
+  />
+  <button
+    hx-post="/todos"
+    hx-trigger="click"
+    hx-target="#todos-content"
+    hx-swap="beforeend"
+  >
+    Add
+  </button>
+</form>
+<div
+  id="list"
+  hx-get="/todos"
+  hx-target="this"
+  hx-trigger="load"
+  hx-swap="outerHTML"
+>
+  Loading...
+</div>
+{% endblock %}
